@@ -99,6 +99,9 @@ allprojects {
       workingDir testsCwd
       useJUnit()
 
+      include '**/*Test.class', '**/Test*.class'
+      exclude '**/*$*'
+
       minHeapSize = resolvedTestOption("tests.minheapsize")
       maxHeapSize = resolvedTestOption("tests.heapsize")
 
@@ -106,6 +109,7 @@ allprojects {
 
       jvmArgs Commandline.translateCommandline(resolvedTestOption("tests.jvmargs"))
       jvmArgs '--illegal-access=deny'
+      jvmArgs "--add-modules", "jdk.incubator.foreign"
 
       systemProperty 'java.util.logging.config.file', file("${resources}/logging.properties")
       systemProperty 'java.awt.headless', 'true'
